--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.com/angular-ui/bootstrap.git"
   },
   "devDependencies": {
-    "angular": "^1.3.15",
+    "angular": "~1.5.8",
     "angular-mocks": "^1.3.15",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.1",
